# EduCPlusPlus

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  CLAUDE.md  README.md  astro.config.mjs  concurrency-fragment.ts  package-lock.json  package.json
.claude/skills/deploy/: SKILL.md
.claude/skills/fill-fundamentals/: SKILL.md
.claude/skills/generate-quiz/: SKILL.md
.claude/skills/generate-quiz-general/: SKILL.md
.claude/skills/plan-article/: SKILL.md
.claude/skills/write-article/: SKILL.md
01_fundamentals/basics/: hello_modern.cpp
01_fundamentals/control_flow/: control_flow.cpp
01_fundamentals/functions/: functions.cpp
02_oop/classes/: classes.cpp
02_oop/constructors/: copy_and_move_constructors.cpp
02_oop/inheritance/: inheritance.cpp
02_oop/polymorphism/: polymorphism.cpp
03_memory_management/raii/: raii.cpp
03_memory_management/smart_pointers/: shared_ptr_example.cpp  unique_ptr_example.cpp
04_stl_containers/associative/: associative_containers.cpp
04_stl_containers/sequence/: sequence_containers.cpp
04_stl_containers/unordered/: unordered_containers.cpp
05_algorithms/ranges/: ranges_algorithms.cpp
05_algorithms/sorting/: sorting_algorithms.cpp
06_templates/class_templates/: class_templates.cpp
06_templates/concepts/: concepts_intro.cpp
06_templates/function_templates/: function_templates.cpp
07_multithreading/atomics/: atomics.cpp
07_multithreading/condition_variables/: condition_variables.cpp
07_multithreading/futures_promises/: futures_promises.cpp
07_multithreading/mutex/: mutex_example.cpp
07_multithreading/threads/: thread_basics.cpp
08_modern_features/constexpr/: constexpr_examples.cpp
08_modern_features/lambdas/: lambda_examples.cpp
08_modern_features/move_semantics/: move_semantics.cpp
09_cpp20_features/concepts/: concepts_advanced.cpp
09_cpp20_features/coroutines/: coroutines.cpp
09_cpp20_features/ranges/: ranges_intro.cpp
09_cpp20_features/three_way_comparison/: spaceship_operator.cpp
10_error_handling/exceptions/: exceptions.cpp
10_error_handling/optional/: optional_example.cpp
EduCPlusPlus/: README.md
EduCPlusPlus/01_fundamentals/basics/: hello_modern.cpp
EduCPlusPlus/01_fundamentals/control_flow/: control_flow.cpp
EduCPlusPlus/01_fundamentals/functions/: functions.cpp
EduCPlusPlus/02_oop/classes/: classes.cpp
EduCPlusPlus/02_oop/constructors/: advanced_constructors.cpp  constructor_fundamentals.cpp  copy_and_move_constructors.cpp
EduCPlusPlus/02_oop/inheritance/: inheritance.cpp
EduCPlusPlus/02_oop/polymorphism/: polymorphism.cpp
EduCPlusPlus/03_memory_management/raii/: raii.cpp
EduCPlusPlus/03_memory_management/smart_pointers/: shared_ptr_example.cpp  unique_ptr_example.cpp
EduCPlusPlus/04_stl_containers/associative/: associative_containers.cpp
EduCPlusPlus/04_stl_containers/sequence/: sequence_containers.cpp
EduCPlusPlus/04_stl_containers/unordered/: unordered_containers.cpp
EduCPlusPlus/05_algorithms/ranges/: ranges_algorithms.cpp
EduCPlusPlus/05_algorithms/sorting/: sorting_algorithms.cpp
EduCPlusPlus/06_templates/class_templates/: class_templates.cpp
EduCPlusPlus/06_templates/concepts/: concepts_intro.cpp
EduCPlusPlus/06_templates/function_templates/: function_templates.cpp
EduCPlusPlus/06_templates/variadic/: variadic_templates.cpp
EduCPlusPlus/07_multithreading/atomics/: atomics.cpp
EduCPlusPlus/07_multithreading/condition_variables/: condition_variables.cpp
EduCPlusPlus/07_multithreading/futures_promises/: futures_promises.cpp
EduCPlusPlus/07_multithreading/mutex/: mutex_example.cpp
EduCPlusPlus/07_multithreading/threads/: thread_basics.cpp
EduCPlusPlus/08_modern_features/constexpr/: constexpr_examples.cpp
EduCPlusPlus/08_modern_features/lambdas/: lambda_examples.cpp
EduCPlusPlus/08_modern_features/move_semantics/: move_semantics.cpp
EduCPlusPlus/09_cpp20_features/concepts/: concepts_advanced.cpp
EduCPlusPlus/09_cpp20_features/coroutines/: coroutines.cpp
EduCPlusPlus/09_cpp20_features/ranges/: ranges_intro.cpp
EduCPlusPlus/09_cpp20_features/three_way_comparison/: spaceship_operator.cpp
EduCPlusPlus/10_error_handling/exceptions/: exceptions.cpp
EduCPlusPlus/10_error_handling/optional/: optional_example.cpp
EduCPlusPlus/11_type_casting/casting_operators/: casting_operators.cpp
EduCPlusPlus/12_io_and_filesystem/filesystem/: filesystem_ops.cpp
EduCPlusPlus/12_io_and_filesystem/streams/: streams.cpp
EduCPlusPlus/13_build_systems/cmake_basics/: CMakeLists.txt  cmake_explained.cpp
EduCPlusPlus/14_variant_and_type_traits/type_traits/: type_traits_guide.cpp
EduCPlusPlus/14_variant_and_type_traits/variant/: variant_and_visitors.cpp
src/components/buggy-code/: BuggyCodeViewer.tsx
src/components/content/: CodeBlock.astro  DecisionGuide.astro  FaqSection.astro  GenericSection.astro  HowItWorks.astro  KeyTakeaways.astro  NumberedSection.astro  PageHeader.astro  WatchOut.astro
src/components/flashcards/: EquationFlashcards.tsx
src/components/landing/: CTACard.astro  CodeDecoration.astro  FeatureCards.astro  Footer.astro  HeroSection.astro  LearningPath.astro  StatsBar.astro
src/components/quiz/: FlashcardQuiz.tsx
src/components/sidebar/: FileLink.astro  ModuleGroup.astro  Sidebar.astro
src/content/: config.ts
src/content/articles/: back-to-basics-move-semantics.md  deep-understanding-auto.md  how-to-think-in-modern-cpp.md  rule-of-zero-three-five.md  string-view-mental-model.md  structured-bindings-mental-model.md  trailing-return-types-mental-model.md
src/layouts/: BaseLayout.astro  DocLayout.astro
src/lib/: parser.test.ts  parser.ts  questions.ts  sidebar-data.ts  toc.ts  types.ts
src/lib/buggy-code/: index.ts  paths.ts  programs.ts  progress.ts  types.ts
src/lib/flashcards/: index.ts  rigid-bodies.ts  types.ts
src/lib/questions/: algorithms.ts  build-systems.ts  code-reading.ts  cpp-idioms.ts  cpp-keywords.ts  cpp20-features.ts  cs-fundamentals.ts  (+22 more)
src/pages/: [...slug].astro  buggy-code.astro  flashcards.astro  index.astro  quiz.astro
src/styles/: global.css
(+2 files in other folders)
